// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders report button 1`] = `
<ReportButton
  forwardRef={null}
  reported={false}
/>
`;

exports[`renders reported button 1`] = `
<ReportButton
  forwardRef={null}
  reported={true}
/>
`;
